// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            The placeholder 
          </span>
          <span
            data-css-5m5yd6=""
          >
            The placeholder 
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance default w/ error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-3w9864=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          />
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance gaps 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <div>
        <label
          data-css-1hniuff=""
          onKeyDown={[Function]}
        >
          <div
            data-css-n53zhn=""
          >
            Problem field
          </div>
          <div
            data-css-1812rv9=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-1uv5m12=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div>
        <label
          data-css-1hniuff=""
          onKeyDown={[Function]}
        >
          <div
            data-css-n53zhn=""
          >
            Problem field
          </div>
          <div
            data-css-3w9864=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-1uv5m12=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-loo18p=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="warning icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div>
        <label
          data-css-1hniuff=""
          onKeyDown={[Function]}
        >
          <div
            data-css-n53zhn=""
          >
            Problem field
          </div>
          <div
            data-css-1812rv9=""
          >
            <button
              data-css-1e7y5c2=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-r2fq9u=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div>
        <label
          data-css-1hniuff=""
          onKeyDown={[Function]}
        >
          <div
            data-css-n53zhn=""
          >
            Problem field
          </div>
          <div
            data-css-3w9864=""
          >
            <button
              data-css-1e7y5c2=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-r2fq9u=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-loo18p=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="warning icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance subtle 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-1e7y5c2=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            The placeholder 
          </span>
          <span
            data-css-5m5yd6=""
          >
            The placeholder 
          </span>
        </button>
        <div
          data-css-r2fq9u=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-3w9864=""
      >
        <button
          data-css-1e7y5c2=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          />
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-r2fq9u=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots disabled compare 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          Normal
        </div>
        <div
          data-css-1812rv9=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              I'm normal, see
            </span>
            <span
              data-css-5m5yd6=""
            >
              I'm normal, see
            </span>
          </button>
          <div
            data-css-1uv5m12=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          data-css-1de0a6a=""
        >
          Still normal
        </div>
      </label>
      <label
        data-css-1h53i33=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          I'm not usable
        </div>
        <div
          data-css-1812rv9=""
        >
          <button
            data-css-8bndf1=""
            disabled={true}
            onBlur={null}
            onClick={null}
            onFocus={null}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              I'm untouchable
            </span>
            <span
              data-css-5m5yd6=""
            >
              I'm untouchable
            </span>
          </button>
          <div
            data-css-1uv5m12=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          data-css-1de0a6a=""
        >
          Neither am I
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots labels all 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Some placeholder
          </span>
          <span
            data-css-5m5yd6=""
          >
            Some placeholder
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels label 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three item
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels label and subLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three item
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels none 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three item
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels placeholder 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            some placeholder
          </span>
          <span
            data-css-5m5yd6=""
          >
            some placeholder
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels selectedLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Some selectedLabel
          </span>
          <span
            data-css-5m5yd6=""
          >
            Some selectedLabel
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels subLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three item
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts full width 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
          "width": "500px",
        }
      }
    >
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          First
        </div>
        <div
          data-css-1812rv9=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-1uv5m12=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Second
        </div>
        <div
          data-css-3w9864=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-1uv5m12=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Third
        </div>
        <div
          data-css-1812rv9=""
        >
          <button
            data-css-1e7y5c2=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-r2fq9u=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Fourth
        </div>
        <div
          data-css-3w9864=""
        >
          <button
            data-css-1e7y5c2=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-r2fq9u=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              className="css-otejxm"
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots layouts right-aligned 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <label
          data-css-1hniuff=""
          onKeyDown={[Function]}
        >
          <div
            data-css-1812rv9=""
          >
            <button
              data-css-1e7y5c2=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              >
                Filter
              </span>
              <span
                data-css-5m5yd6=""
              >
                Filter
              </span>
            </button>
            <div
              data-css-r2fq9u=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        style={
          Object {
            "border": "3px solid green",
            "height": "50px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots menu divider 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three and the amazing item
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu in stack 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <div>
        <label
          data-css-1hniuff=""
          onKeyDown={[Function]}
        >
          <div
            data-css-n53zhn=""
          >
            Level
          </div>
          <div
            data-css-1812rv9=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              >
                Three and the amazing item
              </span>
              <span
                data-css-5m5yd6=""
              >
                Select one
              </span>
            </button>
            <div
              data-css-1uv5m12=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div>
        <label
          data-css-1hniuff=""
          onKeyDown={[Function]}
        >
          <div
            data-css-n53zhn=""
          >
            Level
          </div>
          <div
            data-css-1812rv9=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              >
                Three and the amazing item
              </span>
              <span
                data-css-5m5yd6=""
              >
                Select another one
              </span>
            </button>
            <div
              data-css-1uv5m12=""
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu nested 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three and the amazing item
          </span>
          <span
            data-css-5m5yd6=""
          >
            Select another one
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu onClicks 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-3w9864=""
      >
        <button
          data-css-1e7y5c2=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three and the amazing item
          </span>
          <span
            data-css-5m5yd6=""
          >
            Select another one
          </span>
        </button>
        <div
          data-css-r2fq9u=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu single list 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three and the amazing item
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu single list w/ icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three and the amazing item
          </span>
          <span
            data-css-5m5yd6=""
          >
            Select one
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu super long 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            This level really is the longest level that anyone has ever seen. There is none longer
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu w/ longer nested menu item label 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            The longest in el mundo. Find me!
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu w/ longer placeholder 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            This one is longer than any menu item
          </span>
          <span
            data-css-5m5yd6=""
          >
            This one is longer than any menu item
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots menu w/ subLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Level
      </div>
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three and the amazing item
          </span>
          <span
            data-css-5m5yd6=""
          />
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        The course level
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots placeholder as pre-selected item 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Three item
          </span>
          <span
            data-css-5m5yd6=""
          >
            Two item
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist name 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          name="myFieldNameOfPower"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            I have a form name
          </span>
          <span
            data-css-5m5yd6=""
          >
            I have a form name
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist onChange 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <button
          data-css-8bndf1=""
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <span
            aria-hidden={true}
            data-css-e6fvyw=""
          >
            Change me
          </span>
          <span
            data-css-5m5yd6=""
          >
            Change me
          </span>
        </button>
        <div
          data-css-1uv5m12=""
        >
          <div
            className="css-otejxm"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 14L8 10h9z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
